fix(number-input): increase divider z-index for Firefox

--- a/packages/components/src/components/number-input/_number-input.scss
+++ b/packages/components/src/components/number-input/_number-input.scss
@@ -244,6 +244,7 @@
   }
 
   .#{$prefix}--number__rule-divider {
+    z-index: z('overlay');
     width: rem(1px);
     height: rem(16px);
     background-color: $ui-03;
